# phyxel_gui

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
docs/: gui.js  gui.wasm
gui/: gui.hpp  includes.h  main.cpp  phyxel_window.hpp  static_variables.hpp  utils.hpp
gui/index_html/: gui.js  gui.wasm  index.html
